<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.ladyminks.thirtyoneseconds.presentation.pages.home.HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/thirty_seconds"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btnQuickStart2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />


    <Button
        android:id="@+id/btnQuickStart2"
        style="@style/RoundedButtonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="@dimen/margin1"
        android:text="@string/_2_teams"
        app:layout_constraintBottom_toTopOf="@id/cvTeams"
        app:layout_constraintEnd_toStartOf="@+id/btnQuickStart3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />


    <Button
        android:id="@+id/btnQuickStart3"
        style="@style/RoundedButtonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin1"
        android:text="@string/_3_teams"
        app:layout_constraintBottom_toBottomOf="@+id/btnQuickStart2"
        app:layout_constraintEnd_toStartOf="@+id/btnQuickStart4"
        app:layout_constraintStart_toEndOf="@+id/btnQuickStart2" />

    <Button
        android:id="@+id/btnQuickStart4"
        style="@style/RoundedButtonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/_4_teams"
        app:layout_constraintBottom_toBottomOf="@+id/btnQuickStart3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnQuickStart3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTeams"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuickStart2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvFirstTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Noot"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tvSecondTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSecondTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Noot"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tvThirdTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstTeam" />

            <TextView
                android:id="@+id/tvThirdTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Noot"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@id/btnManageTeams"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSecondTeam" />


            <Button
                android:id="@+id/btnManageTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/more_teams"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvThirdTeam"
                style="@style/RoundedButtonTheme"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTeams"
        style="@style/RoundedButtonTheme"/>

</androidx.constraintlayout.widget.ConstraintLayout>